# shaderx-wgpu

./: Cargo.toml
.github/workflows/: build.yml  rust.yml
src/: app.rs  gfx.rs  lib.rs  main.rs  types.rs
src/gfx/: gfx_state.rs  mod.rs  pipeline.rs  temp.wgsl  uniform_buffer.rs
