[package]
name = "shaderx-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.17.0", features = ["derive"] }
cfg-if = "1.0.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.11.5"
js-sys = "0.3.70"
log = "0.4.22"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = [
  "Document",
  "Window",
  "Element",
] }
web-time = "1.1.0"
wgpu = { version = "22.1.0", features = ["webgl"] }
winit = { version = "0.30.5", features = ["rwh_05"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
